2024CR909	8/12/2024	MikeR	Bug	"Reference Checks. When a rater completes a reference check and there are NO credits available, the system should create an applied overage in the credit record and indicate on the rc check, the same as with tests.
Note - appears to do this. Added logging to show we created the overage for this rc check to help with future recurrance investigations."
2024CR913	8/12/2024	MikeR	Bug	Reference Checks. When a reference check is deactivated it is placed into either completed or deactivated status, depending on whether there is any data. If placed in completed status and a rater tries to start, they are told it is complete, which is confusing. Need to show deactivated message for raters who enter after deactivation when status is set to completed. Do this by looking for a deactivated rater.